# cloud-accelerator-diagnostics

./: CONTRIBUTING.md  README.md
pip_package/: CHANGELOG.md  pyproject.toml
pip_package/cloud_accelerator_diagnostics/: __init__.py
pip_package/cloud_accelerator_diagnostics/src/tensorboard_uploader/: tensorboard.py  uploader.py
pip_package/cloud_accelerator_diagnostics/tests/tensorboard_uploader/: tensorboard_test.py  uploader_test.py
tpu_info/: README.md  pyproject.toml
tpu_info/tpu_info/: __init__.py  args.py  args_helper.py  cli.py  cli_helper.py  cli_test.py  device.py  device_test.py  metrics.py  metrics_test.py
tpu_info/tpu_info/proto/: __init__.py  tpu_metric_service.proto  tpu_telemetry.proto
